# Qubx

./: .gitignore  0.10.2  README.md  UsersdmitrAppDataLocalTemptmp-24644nzrEurPhjvsi.xml  build.py  justfile  pyproject.toml
experiments/: 0. Ideas - reading filesystem.ipynb  1.0 Incremental Series.ipynb  1.0 Time Series And Indicators.ipynb  1.1 Calculate Indicators on formed bars.ipynb  1.1 Test Indicators on formed bars.ipynb  1.2 Incremental Cython Experiments.ipynb  1.2 Multi Series Indicators.ipynb  1.3 BFS tests.ipynb  100.0 Utils Triage.ipynb  100.0 Utils Trieage.ipynb  1000.1 pyximport tests.ipynb  2.0 Strategy design.ipynb  3.0 Storages and Data Loaders.ipynb  4.0 CCXT tests.ipynb  4.0 StrategyContext (with CCXT) tests.ipynb  4.1 Account and Positions management.ipynb  4.1 Queue listener.ipynb  4.2 Strategy Running.ipynb  4.3 Portfolio and Balance Loggers.ipynb  4.4 Croniter tests.ipynb  4.5 Future trading (with CCXT).ipynb  5.0 DataBase Srorage.ipynb  5.0 OME blotter.ipynb  5.0 Trade feed.ipynb  5.1 Multiple triggers.ipynb  5.1 Simulator blotter.ipynb  5.2 OrderBook tests.ipynb  6.0 Signals Tracking.ipynb  7.0 Universe updates.ipynb  8.0 Stop Orders Simulation.ipynb  8.1 Generated Signals And Tracker.ipynb  9.0 DataReader refactoring.ipynb  9.1 Ccxt connector refactoring.ipynb  9.2 Live plotting.ipynb  9.5 Simulator data pump.ipynb  9.6 Simulator reviewed.ipynb  __ 1. Incremental indicators.ipynb  __ 1.1 Incremental Cython Experiments.ipynb  asyncs.py  binance.json  (+3 more)
experiments/booster/: 0. Ideas - reading filesystem.ipynb  1. Incremental indicators.ipynb  1.1 Incremental Cython Experiments.ipynb  1.1 Incremental Cython.ipynb  1.2 Incremental Cython Experiments.ipynb  2.0 Strategy design.ipynb
experiments/configs/: example-accounts.cfg  zero_test.yaml  zero_test_scheduler.yaml
experiments/core/: 0.0 Ideas - reading filesystem.ipynb  1.3 Loc on complex indicators.ipynb  2.0 Strategy design.ipynb  4.1 Account and Positions management.ipynb
experiments/data/: 9.0 DataReader refactoring.ipynb  BTCUSDT_ohlcv_M1.csv  BTCUSDT_ohlcv_M1_sec.csv
experiments/live/: 4.0 StrategyContext (with CCXT) tests.ipynb  4.2 Strategy Running.ipynb  5.0 Trade feed.ipynb  9.4 Live plotting.ipynb
experiments/live/configs/: multiple_triggers.yaml  zero_test_scheduler.yaml
experiments/misc/: 100.1 Queue listener.ipynb  asyncs.py  cxtest.pyx
experiments/simulator/: 8.0 Stop Orders Simulation.ipynb  9.2 Simulator reviewed.ipynb
experiments/strats/: teststrat.py  tradefeed.py
experiments/trackers/: 8.0 Signals Tracking.ipynb  8.1 Generated Signals And Tracker.ipynb  8.2 Composite trackers.ipynb
src/qube/: __init__.py  _nb_magic.py
src/qube/core/: __init__.py  basics.py  cseries.pyx  cseries.pyxbld1  cseries1.pyx  lookups.py  series.pxd  series.py  series.pyx  series.pyxbld__1  strategy.py  temporal.py  utils.pyx
src/qube/data/: readers.py
src/qube/math/: __init__.py  stats.py
src/qube/ta/: __init__.py  indicators.pyx
src/qubx/: __init__.py  _nb_magic.py
tests/: conftest.py
tests/data/: generated_signals.csv  signals_issue.csv
tests/qubx/: series.pyxbld__1
(+163 files in other folders)
