[tool.poetry]
name = "Qubx"
version = "0.1.4"
description = "Qubx - quantitative trading framework"
authors = ["Dmitry Marienko <dmitry@gmail.com>"]
readme = "README.md"
packages = [
    { include = "qubx", from = "src" },
]
repository = "https://github.com/dmarienko/Qubx"
include = [
    # Compiled extensions must be included in the wheel distributions
    { path = "src/**/*.so", format = "wheel" },
    { path = "src/**/*.pyd", format = "wheel" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pytest = {extras = ["lazyfixture"], version = "^7.2.0"}
numpy = "^1.26.3"
ntplib = "^0.4.0"
loguru = "^0.7.2"
tqdm = "*"
importlib-metadata = "*"
stackprinter = "^0.2.10"
pymongo = "^4.6.1"
pydantic = "^1.10.2"
python-dotenv = "^1.0.0"
python-binance = "^1.0.19"
pyarrow = "^15.0.0"
scipy = "^1.12.0"
cython = "3.0.8"
ccxt = "^4.2.68"
croniter = "^2.0.5"
psycopg = "^3.1.18"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"

#[project.optional-dependencies]
#numba = "^0.57.1"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core", "setuptools", "numpy>=1.26.3", "cython==3.0.8", "toml>=0.10.2",]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = false


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-mock = "*"


[tool.pytest.ini_options]
pythonpath = ["src"]